# teo-generator

./: Cargo.toml  README.md
src/: lib.rs
src/admin/: default_preferences_ts.rs  enum_definitions_ts.rs  mod.rs  pages_index_index_ts.rs  pages_page_dashboard.rs  pages_page_form.rs  pages_page_form_page.rs  pages_page_index.rs  pages_page_records.rs  pages_page_records_list.rs  pages_page_stack_default_item_keys_tsx.rs  pages_render_default_stack_item_tsx.rs  preferences_ts.rs  sign_in_form_tsx.rs  sign_in_index_ts.rs  sign_in_keys_ts.rs  translations_index_ts.rs  translations_init_ts.rs  translations_lang_index_ts.rs  translations_languages_ts.rs  webpack_config_js.rs  webpack_config_ts.rs
src/client/: ctx.rs  generator.rs  mod.rs
src/client/generators/: mod.rs
src/client/generators/csharp/: gen.rs  mod.rs
src/client/generators/dart/: gen.rs  lookup.rs  mod.rs  pubspec.rs
src/client/generators/kotlin/: gen.rs  lookup.rs
src/client/generators/swift/: gen.rs  lookup.rs  mod.rs  package_swift.rs
src/client/generators/ts/: backup.rs  gen.rs  lookup.rs  mod.rs  package_json.rs
src/client/outline/: mod.rs  outline.rs
src/entity/: ctx.rs  generator.rs  mod.rs
src/entity/generators/: mod.rs
src/entity/generators/node/: gen.rs  lookup.rs  mod.rs
src/entity/generators/python/: gen.rs  lookup.rs
src/entity/generators/rust/: gen.rs  lookup.rs  mod.rs
src/entity/outline/: mod.rs  outline.rs
src/entity/outline/enum/: enum.rs  member.rs  mod.rs
src/entity/outline/interface/: field.rs  interface.rs  mod.rs
src/old_gen/: backup.rs
src/old_gen/generators/server/nodejs/: gen.rs
src/old_gen/internal/client/outline/: class.rs
src/outline/: mod.rs  outline.rs
src/outline/delegate/: delegate.rs  group_item.rs  mod.rs  namespace_item.rs  request_item.rs
src/outline/enum/: enum.rs  member.rs  mod.rs
src/outline/interface/: field.rs  interface.rs  mod.rs
src/outline/path_arguments/: mod.rs
src/shared/ts/: conf.rs  lookup.rs  mod.rs  templates.rs
src/utils/: declared_shape_lookup.rs  enum_reference_lookup.rs  exts.rs  file.rs  filters.rs  lookup.rs  message.rs  mod.rs  shape_reference_lookup.rs  update_package_json_version.rs
templates/admin/: webpack.config.js.jinja
templates/client/dart/: helper.dart.jinja  namespace.dart.jinja  teo.dart.jinja  teo.dart.jinja.bak
templates/client/kotlin/: build.gradle.kts.jinja  namespace.backup  namespace.kt.jinja  namespace.kt.jinja.backup  teo.kt.jinja
templates/client/swift/: namespace.swift.jinja  teo.swift.backup  teo.swift.jinja  useful.backup
templates/client/ts/: index.d.ts.jinja  index.js.jinja  namespace.partial.jinja  namespace_unused.jinja  tsconfig.json
templates/entity/nodejs/: index.d.ts.jinja
templates/entity/python/: __init__.py.jinja
templates/entity/rust/: mod.rs.jinja  old_mod.rs.jinja
templates/entity/rust/helpers/: enum.rs.jinja  interface.rs.jinja  mod.rs.jinja
templates/shared/ts/: enum_alt.jinja  index.d.ts.jinja  namespace.partial.jinja
