[package]
name = "teo-generator"
version = "0.2.25"
edition = "2021"
description = "SDK generators for Teo"
license = "Apache-2.0"
homepage = "https://teocloud.io"
documentation = "https://teocloud.io/docs"
repository = "https://github.com/teocloud/teo-generator"

[dependencies]
teo-result = { version = "0.2.23", features = ["reqwest"], path = "../teo-result" }
teo-parser = { version = "0.2.25", path = "../teo-parser" }
teo-runtime = { version = "0.2.25", path = "../teo-runtime" }
async-trait = "0.1.74"
async-recursion = "1.0.5"
inflector-plus = "0.11.7"
pad = "0.1.6"
colored = "2.1"
askama = "0.12.1"
indexmap = "2.1.0"
pathdiff = "0.2.1"
maplit = "1.0.2"
toml_edit = "0.22.5"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
indent = "0.1.1"
regex = "1.10.2"
itertools = "0.12.0"
reqwest = { version = "0.12.2", features = ["json"] }
