[package]
name = "teo-generator"
version = "0.3.0-alpha.1"
edition = "2021"
description = "SDK generators for Teo"
license = "Apache-2.0"
homepage = "https://teodev.io"
documentation = "https://docs.teodev.io"
repository = "https://github.com/teodevgroup/teo-generator"

[dependencies]
teo-result = { version = "0.3.0-alpha.1", features = ["reqwest"], path = "../teo-result" }
teo-parser = { version = "0.3.0-alpha.1", path = "../teo-parser" }
teo-runtime = { version = "0.3.0-alpha.1", path = "../teo-runtime" }
async-trait = "0.1.80"
async-recursion = "1.1.1"
inflector-plus = "0.11.7"
pad = "0.1.6"
colored = "2.1"
askama = "0.12.1"
indexmap = "2.6.0"
pathdiff = "0.2.2"
maplit = "1.0.2"
toml_edit = "0.22.12"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
indent = "0.1.1"
regex = "1.11.1"
itertools = "0.13.0"
reqwest = { version = "0.12.9", features = ["json"] }
quoted-string = "0.6.1"
once_cell = "1.20.0"